# evci_freight_v2_Updated

./: 00_config.ipynb  01_model.ipynb  02_maps.ipynb  03_analysis.ipynb  README.md  _publish.yml  api.py  example.py  index.ipynb  pyproject.toml  settings.ini
.ipynb_checkpoints/: 00_config-checkpoint.ipynb  01_model-checkpoint.ipynb  02_maps-checkpoint.ipynb  03_analysis-checkpoint.ipynb  correctness_proof_multiplication-checkpoint.ipynb  index-checkpoint.ipynb
_book/: EVCI-siting-tool.docx
_docs/: analysis.html  config.html  index.html  maps.html  model.html  search.json  sitemap.xml
_proc/: 00_config.ipynb  01_model.ipynb  02_maps.ipynb  03_analysis.ipynb  _quarto.yml  index.ipynb  nbdev.yml  requirements.txt  sidebar.yml  sidebar.yml.bak
_proc/_docs/: index.html  robots.txt
evci_tool/: _modidx.py  analysis.py  config.py  maps.py  model.py
evci_tool/.ipynb_checkpoints/: model-checkpoint.py
input/: api.py  model.xlsx
input/chandigarh_karnal/: grid.xlsx  sites.xlsx  traffic.xlsx
output/chandigarh_karnal/: clustered_evci_analysis.json  clustered_evci_analysis.xlsx  initial_evci_analysis.json  initial_evci_analysis.xlsx
