[tool.poetry]
name = "evci-web"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.2"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
Shapely = "^1.8.1"
scipy = "^1.8.0"
openpyxl = "^3.0.9"
Fiona = "^1.8.21"
Rtree = "^0.9.7"
geopandas = "^0.10.2"
tqdm = "^4.64.0"
PuLP = "^2.6.0"
jupyterlab = "^3.4.4"
ipywidgets = "^7.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
